fixed modal on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,15 +199,15 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
+    overflow: none; /* Enable scroll if needed */
     background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
     transition: opacity 0.5s ease;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; /* 5% from the top and centered */
+    background-color: #708394fa;
+    margin: 3% auto; /* 5% from the top and centered */
     padding: 10px;
     width: 90%; /* Responsive width */
     max-width: 800px; /* Max width for large screens */
@@ -229,30 +229,61 @@ body{
     cursor: pointer;
 }
 
-.carousel-inner img {
-    width: 100%;
-    height: auto; /* Maintain aspect ratio */
+.carousel {
+    position: relative;
+    max-width: 90%;
+    margin: auto;
+}
+
+.carousel-inner {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel-item {
+    min-width: 100%;
+    transition: transform 0.5s ease;
+}
+
+.carousel-item img {
+    width: 80%;
+    height: auto;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for visibility */
+}
+
+.prev {
+    left: 10px;
+    border-radius: 3px 0 0 3px;
+}
+
+.next {
+    right: 10px;
+    border-radius: 0 3px 3px 0;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
 }
-
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-btn:hover,
-.close-btn:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 /* Media Queries for Responsiveness */
 @media (max-width: 1200px) {
     .welcome_section {
@@ -323,6 +354,8 @@ body{
         font-size: 15px;
         margin-bottom: 10px;
     }
+
+    
 }
 
 /*---IPHONE---*/
@@ -367,5 +400,10 @@ body{
     .map_section h3 {
         font-size: 15px;
         margin-bottom: 10px;
+    }
+
+    .modal-content{
+        margin: 50% auto; /* 5% from the top and centered */
+        width: 46vh;
     }
 }
